--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,24 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
+body {
+  background: url("bg.png") repeat-x scroll 0 0 #FFFFFF;
+  margin: 0;
+  text-align: center;
+  }
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  font-family: YanoneKaffeesatzRegular,Arial,Helvetica,sans-serif;
+  color: #111111;
+  }
+.input_default {
+  margin: 10px 0;
+  border-width: 0 0 2px 0;
+  border-bottom-color: Olive;
+  padding: 0;
+  font-size: 16px;
+  color: LightGrey;
+  }
+.input_submit {
+  }
+#container {
+  margin: 0 auto;
+  width: 800px;
+  }
