--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<h1>Hello rails!</h1>
+样式：<br />
+h1:<h1>Hello rails!</h1>
+h2:<h2>Hello rails!</h2>
+h3:<h3>Hello rails!</h3>
+
