--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,21 @@
 <head>
   <title>Blog</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= yield :base_assets %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<div id="container">
+  <div id="header">
+    <%= yield :header %>
+  </div>
+  <div id="content">
+    <%= yield %>
+  </div>
+  <div id="footer">
+    <a href="https://github.com/tiemei/blog">开源</a>
+  </div>
+</div>
 </body>
 </html>
