--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= yield %>
   </div>
   <div id="footer">
-    <a href="https://github.com/tiemei/blog">开源</a>
+    <a href="https://github.com/tiemei/blog">开源主页</a>
   </div>
 </div>
 </body>
