--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,3 +1,5 @@
 <% form_for(@article) do |f| %>
-  
+  <%= f.text_field :title %>
+  <%= f.text_area :content, :size => "24x6" %>
+  <%= f.submit '提交', :class => 'input_submit' %>
 <% end %>
