--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@article) do |f| %>
-  <div class="item">
-    <%= f.text_field :title %>
-  </div>
-  <%= f.text_area :content, :size => "100x100" %>
+  title:<br />
+  <%= f.text_field :title %><br />
+  cotent:<br />
+  <%= f.text_area :content, :size => "90x50" %><br />
   <%= f.submit submit_text, :class => 'input_submit' %>
 <% end %>
