--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -86,6 +86,7 @@ ul {
   }
 #content .left {
   font-size: 85%;  
+  width: 85%;
 }
 .left {
   float: left;  
@@ -143,7 +144,7 @@ ul {
 }
 
 /* toolbox样式 */
-#content h4 {
+#content .right h4 {
   margin: 1em 0 0 0;
 }
 #content ul {
