--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
           <li><a class="green" href="/logout">logout</a></li>
           <li>About</li>
         </ul>
+        <!-- 右侧下方扩展内容 -->
+        <%= yield :right_below %>
       </div>
     <% end %>
   </div>
