--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
 <h3 class="CadetBlue"><%= @article.title %></h3>
+<h6>
+<% @article.tags.each do |tag| %>
+<%= tag.name %>
+<% end %>
+</h6>
 <%= markdown(@article.content) %>
 <%= flash[:n] %>
